--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.9",
     "axios": "^1.9.0",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.17.0",
     "lucide-react": "^0.514.0",
     "react": "^19.1.0",
